load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

sh_binary(
    name = "vcpkg-install",
    srcs = ["vcpkg-install.sh"],
)

cc_binary(
    name = "app_demo",
    srcs = glob([
        "src/**/*.h", 
        "src/**/*.cpp"
    ]),
    #deps = ["//include:manydeps-gmp-lib", ":gmp-all"]
    deps = ["//include:manydeps-gmp-lib", "@gmp//:gmp-all"]
)
